# cours_iae

./: 00_code.ipynb  00_intro_end_to_end_project.ipynb  01_SVM.ipynb  README.md  ann.md  install_uv.md
00_intro/code/: 00_code.ipynb  00_intro_end_to_end_project.ipynb  set_up.ipynb
00_intro/cours/: 00_intro_end_to_end_project.md  cheat_sheet_command_line.md  svm_cours.ipynb
01_SVM/: pyproject.toml
01_SVM/code/: 01_SVM.ipynb  01_SVM_DEMO.ipynb  01_SVM_code.ipynb
01_SVM/cours/: 01_SVM.md
01_SVM/td/code/: 01_SVM_TD.ipynb  01_SVM_TD_CORRIGE_Q1_Q6.ipynb  01_SVM_TD_correction.ipynb  02_svm_kernel_td.ipynb  requirements.txt
01_SVM/td/data/: iris_noise.csv
02_ANN/: ann.ipynb
02_ANN/cours/: 02_ANN_COURS  02_ANN_COURS.md
02_ANN/td/: td_ann_01.ipynb  td_ann_02.ipynb  td_ann_02_correction.ipynb  td_ann_02_correction_q3.ipynb
03_TRAIN/: exercice_data_viz.ipynb  exercice_indus_projet.md  exercice_industrialisation_modele.md
04_EVAL/: notebook_eval.ipynb
04_EVAL/data/: mobile_price_na.csv  test.csv
04_INTERPRETABLE_ML/: cours.md  pyproject.toml
04_INTERPRETABLE_ML/code/: interpretable_models_code.ipynb  theories.ipynb
04_INTERPRETABLE_ML/cours/: global_model_agnostic.md  introduction_interpretable_black_box.md  local_model_angostic.md
04_INTERPRETABLE_ML/td/: requirements_interpretability.txt  td1_interpretability.ipynb  td1_interpretability_correction.ipynb  td2_explicabilite.ipynb  td2_explicabilite_correction.ipynb
04_INTERPRETABLE_ML/td/data/: boston_housing.csv
