[project]
name = "01-svm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sklearn-evaluation>=0.12.2",
]
