[project]
name = "04-interpretable-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alibi>=0.9.6",
    "imblearn>=0.0",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pyartemis>=0.1.5",
    "scikit-learn==1.6.1",
    "scipy>=1.15.3",
    "shap>=0.49.1",
]
